// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel macro css 1`] = `
"import { css as _css } from '../src';

/*#__PURE__*/_css('margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:', widthVar, ';', {
    meta: {
        identifierName: '',
        location: {
            filename: 'macro.test.js',
            line: 3,
            column: 7
        }
    }
});"
`;

exports[`babel macro css call with no args 1`] = `
"import { css as _css } from '../src';

const cls1 = /*#__PURE__*/_css();"
`;

exports[`babel macro css inside of css 1`] = `
"import { css as _css } from '../src';

const cls2 = /*#__PURE__*/_css('font-size:20px;@media (min-width:420px){color:blue;', /*#__PURE__*/_css('width:96px;height:96px;', {
  meta: {
    identifierName: 'cls2',
    location: {
      filename: 'macro.test.js',
      line: 7,
      column: 13
    }
  }
}), ';line-height:40px;}background:green;', {
  meta: {
    identifierName: 'cls2',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 20
    }
  }
});"
`;

exports[`babel macro css object 1`] = `
"import { css as _css } from '../src';

const cls1 = /*#__PURE__*/_css({ display: 'flex' });"
`;

exports[`babel macro flush 1`] = `
"import { flush as _flush } from '../src';

const someOtherVar = _flush;"
`;

exports[`babel macro fontFace 1`] = `
"import { fontFace as _fontFace } from '../src';

_fontFace('font-family:MyHelvetica;src:local(\\"Helvetica Neue Bold\\"),local(\\"HelveticaNeue-Bold\\"),url(MgOpenModernaBold.ttf);font-weight:bold;', {
     meta: {
          identifierName: '',
          location: {
               filename: 'macro.test.js',
               line: 3,
               column: 12
          }
     }
});"
`;

exports[`babel macro hydrate 1`] = `
"import { hydrate as _hydrate } from '../src';

const someOtherVar = _hydrate;"
`;

exports[`babel macro injectGlobal 1`] = `
"import { injectGlobal as _injectGlobal } from '../src';

_injectGlobal('body{margin:0;padding:0;& > div{display:none;&:hover{color:green;& span{color:red;&:after{content:\\"end of line\\"}}}}}html{background:green;}', {
  meta: {
    identifierName: '',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 16
    }
  }
});"
`;

exports[`babel macro keyframes 1`] = `
"import { keyframes as _keyframes } from '../src';

const rotate360 = /*#__PURE__*/_keyframes('from{transform:rotate(0deg);}to{transform:rotate(360deg);}', {
  meta: {
    identifierName: 'rotate360',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 31
    }
  }
});"
`;

exports[`babel macro multiple imports 1`] = `
"import { keyframes as _keyframes, css as _css } from '../src';

const rotate360 = /*#__PURE__*/_keyframes('from{transform:rotate(0deg);}to{transform:rotate(360deg);}', {
  meta: {
    identifierName: 'rotate360',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 31
    }
  }
});
const thing = /*#__PURE__*/_css('margin:12px 48px;color:#ffffff;display:flex;flex:1 0 auto;color:blue;width:', widthVar, ';', {
  meta: {
    identifierName: 'thing',
    location: {
      filename: 'macro.test.js',
      line: 11,
      column: 19
    }
  }
});"
`;

exports[`babel macro some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from '../src';

const someOtherVar = _thisDoesNotExist;"
`;

exports[`babel macro styled css from react 1`] = `
"import { css as _css } from './styled';

const someCls = /*#__PURE__*/_css('display:flex;', {
  meta: {
    identifierName: 'someCls',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 25
    }
  }
});"
`;

exports[`babel macro styled object function 1`] = `
"import _styled from './styled';

const SomeComponent = /*#__PURE__*/_styled('div')({
  display: 'flex'
});"
`;

exports[`babel macro styled object member 1`] = `
"import _styled from './styled';

const SomeComponent = /*#__PURE__*/_styled('div')({
  display: 'flex'
});"
`;

exports[`babel macro styled some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from './styled';

const someOtherVar = _thisDoesNotExist;"
`;

exports[`babel macro styled tagged template literal function 1`] = `
"import _styled from './styled';

const SomeComponent = /*#__PURE__*/_styled('div')('display:flex;', {
  meta: {
    identifierName: 'SomeComponent',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 43
    }
  }
});"
`;

exports[`babel macro styled tagged template literal member 1`] = `
"import _styled from './styled';

const SomeComponent = /*#__PURE__*/_styled('div')('display:flex;', {
  meta: {
    identifierName: 'SomeComponent',
    location: {
      filename: 'macro.test.js',
      line: 3,
      column: 40
    }
  }
});"
`;
